Fixed sonar complains
Signed-off-by: pierantoniomerlino <pierantonio.merlino@eurotech.com>